# F1TENTH-DeepVision-Costmaps

./: .gitignore  ContetNetwork.py  README.md  data_pretreatment.py  datareduction.py  dataset.py  main.ipynb  main.py  mean_std.py  params1.pth  pretreatment.py  pyproject.toml  requirements.txt  script_video.md  simple_tests.py  test_network.py
models/: unet_best.pth
notebooks/: demo.ipynb
scripts/: evaluate.py  train_context.py  train_unet.py
src/: __init__.py
src/data/: __init__.py  dataset.py  preprocessing.py
src/models/: __init__.py  context_net.py  unet.py
src/utils/: __init__.py  training.py
