[project]
name = "f1tenth-deepvision-costmaps"
version = "0.1.0"
description = "Deep learning models for F1TENTH autonomous racing: converting dashcam images to navigation costmaps using U-Net and Context Networks"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyter==1.1.1",
    "matplotlib==3.10.6",
    "numpy==2.2.6",
    "opencv-python==4.12.0.88",
    "pandas==2.3.2",
    "pillow==11.3.0",
    "scipy==1.15.3",
    "torch==2.8.0",
    "torchvision==0.23.0",
    "tqdm==4.67.1",
    "wandb==0.21.3",
]